2007-09-20  Akim Demaille  <akim.demaille@free.fr>

	string escapes
	* src/object/atom.hxx: Sort.
	Tidy.
	Clean.
	(Atom<String>::print): Use libport::escape.
	* tests-local.mk: Adjust to tests renaming.

2007-09-20  Akim Demaille  <akim.demaille@free.fr>

	Missing include
	* src/parser/bison/ugrammar.y: separator.hh is now needed.
	It used to "leak" from pretty-printer.hh.

2007-09-20  Akim Demaille  <akim.demaille@free.fr>

	Escape ast strings
	Reported by Benoit Sigoure.
	* src/ast/ast.yml (String::printer): Use escape.

2007-09-20  Akim Demaille  <akim.demaille@free.fr>

	Don't lose the UCONSOLE_MODE when BEGIN is called
	When we use BEGIN (e.g. for strings), we come back to INITIAL
	instead of coming back to UCONSOLE_MODE.
	* src/parser/bison/utoken.l (first_run): Replace with...
	(sc_default): this.
	Compute appropriately.
	(UCONSOLE_MODE): Rename as...
	(SC_UCONSOLE): this.

2007-09-20  Akim Demaille  <akim.demaille@free.fr>

	Use libport::escape in the pretty printer
	* dev/ast_params.py (printer_cc_prologue): New.
	* dev/ast-pretty-printer-gen: Use it.
	Move includes used in the implementation into the CC file, not the HH.
	Remove useless imports.

2007-09-20  Akim Demaille  <demaille@gostai.com>

	= is sugar for setSlot
	We need updateSlot, but this implements exactly the (incorrect)
	semantics we have until now.
	* src/ast/ast.yml, src/runner/runner.hh, src/runner/runner.cc
	(Assign): remove.
	* src/object/object-class.cc (object_class_updateSlot): New.
	(object_class_setSlot): Return the pseudo rhs.
	* src/parser/bison/ugrammar.y (call): Yet another one, with 2 args.
	(assign): New.
	Use it to replace ast::Assign.

2007-09-20  Akim Demaille  <demaille@gostai.com>

	while
	* src/ast/ast.yml: Remove dead comments.
	(While): New.
	* src/parser/bison/ugrammar.y: Use it.
	* src/object/object.hh (IS_TRUE): New.
	* src/runner/runner.hh, src/runner/runner.cc (If): Use IS_TRUE.
	Remove spurious YIELD.
	(While): New.
